tests/parsing/smtlib/mcil/errors/279_check-system_assumption_unclosed.mcil
(check-system s1 :assumption (a t _))